[package]
name = "data-seeder"
version = "0.1.0"
edition = "2021"
authors = ["Benjamen Pyle"]

[dependencies]

shared = { path = "../shared" }

tokio = { version = "1.42.0", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls" , "postgres", "chrono", "uuid"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dsql = "1.0.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
openssl = { version = "0.10.35", features = ["vendored"] }
tracing = "0.1.41"
